--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-233.0KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 198.57.27.225, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 198.57.27.225, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇭🇰 香港-1.11MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 198.57.27.225, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-320.5KB/s(Youtube:不良林), server: sg01.czsx1624.tk, port: 443, type: vmess, uuid: d002b422-eace-4e01-bf58-e4bb0bcfe7af, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /3a8545177/, ws-headers: {Host: sg01.czsx1624.tk}}
   - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-422.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
@@ -66,18 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-233.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
