--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇭🇰 香港-1.11MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 198.57.27.225, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-320.5KB/s(Youtube:不良林), server: sg01.czsx1624.tk, port: 443, type: vmess, uuid: d002b422-eace-4e01-bf58-e4bb0bcfe7af, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /3a8545177/, ws-headers: {Host: sg01.czsx1624.tk}}
-  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-422.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-516.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20743, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-2.32MB/s(Youtube:不良林), server: 198.57.27.225, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.60MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-8.08MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.68MB/s(Youtube:不良林), server: 198.57.27.225, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 167.88.61.50, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-4.50MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-339.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-350.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20739, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -74,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-829.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-516.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
