--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-1.11MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 阿联酋-893.6KB/s(Youtube:不良林), server: 217.138.193.6, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.32MB/s(Youtube:不良林), server: 198.57.27.225, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-1.60MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-8.08MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.68MB/s(Youtube:不良林), server: 198.57.27.225, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 198.57.27.225, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.84MB/s(Youtube:不良林), server: 198.57.27.225, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇸🇬 新加坡-1.57MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 167.88.61.50, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-4.50MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 阿联酋-893.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 阿联酋-893.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 阿联酋-893.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 阿联酋-893.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 阿联酋-893.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 阿联酋-893.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.11MB/s(Youtube:不良林)
+      - 阿联酋-893.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
