--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 阿联酋-893.6KB/s(Youtube:不良林), server: 217.138.193.6, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.32MB/s(Youtube:不良林), server: 198.57.27.225, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.78MB/s(Youtube:不良林), server: 198.57.27.225, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇭🇰 香港-440.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 198.57.27.225, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.84MB/s(Youtube:不良林), server: 198.57.27.225, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇸🇬 新加坡-1.57MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 167.88.61.50, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-4.50MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-339.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-350.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20739, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-450.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20739, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 阿联酋-893.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 阿联酋-893.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 阿联酋-893.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 阿联酋-893.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 阿联酋-893.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 阿联酋-893.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 阿联酋-893.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-339.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-350.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
