--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.62MB/s(Youtube:不良林), server: 198.57.27.225, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇭🇰 香港-440.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.33MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇸🇬 新加坡-849.1KB/s(Youtube:不良林), server: zecjk.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: zecjk.com}}
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-324.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20741, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-426.9KB/s(Youtube:不良林), server: HJ001.xiba1.xyz, port: 20762, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: HJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 167.88.61.50, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.19MB/s(Youtube:不良林), server: 198.57.27.225, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 198.57.27.225, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.59MB/s(Youtube:不良林), server: 198.57.27.225, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林), server: 185.167.116.252, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林), server: 185.167.116.252, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-849.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-849.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-849.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-849.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-849.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-849.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-849.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
